# math

./: .gitignore  .lintr  CMakeLists.txt  README.md
bak/: math_deprecate.h
data/: 000001.csv  600848.csv
example/: CMakeLists.txt
example/armadillo/: CMakeLists.txt  arma_lasso.cpp  armadillo_demo.cpp  f_select.cpp  kalman.cpp  linear_regression.cpp  run.sh
example/eigen/: CMakeLists.txt  eigen_kalman.cpp  linear_regression_eigen.cpp  pcar.cpp
example/eigen/alignment/: overview.md  stl_with_eigen_object.cpp  structure_with_eigen_object.cpp
example/eigen/app/: basic_linear_equation.cpp  eigen_lasso.cpp  eigen_value_vector.cpp  least_squares.cpp  markov_matrix.cpp  overview.md  positive_definite.cpp  rank_decomposition.cpp
example/eigen/core/: alias.cpp  block.cpp  raw_buffer.cpp  reduction.cpp  storage_order.cpp
example/eigen/matrix/: array.cpp  inverse_determinant.cpp  matrix.cpp  reshape.cpp  slice.cpp  special_variable.cpp
example/play/: CMakeLists.txt  half_life.cpp  l1_filter.cpp  test_pcor_sensitivity.cpp  test_precision.cpp  test_quantile.cpp  test_random.cpp  test_rcor.cpp  test_reduce_outlier.cpp  test_weighted_sample.cpp
example/recipe/: CMakeLists.txt  auto_diff.cpp  fourier_series.cpp  gradient_descent_converge.cpp  min_gradient.cpp  numeric_integral_differentiation.cpp  taylor_series.cpp
example/stats/: CMakeLists.txt  general_constant_expression_math.cpp
example/stats/continuous/: F.cpp  beta.cpp  cauchy.cpp  chi_squared.cpp  exponential.cpp  gamma.cpp  gaussian.cpp  inverse_gamma.cpp  laplace.cpp  log_normal.cpp  logistic.cpp  students_t.cpp  uniform.cpp
example/stats/discrete/: bernoulli.cpp  binomial.cpp  poisson.cpp
example/svm/: CMakeLists.txt  train.cpp  train_lm.cpp
include/: L1TrendFilter.h  MMSlideWindow.h  discrete_distribution.h  linear_svm.h  math_bar.h  math_combination.h  math_container.h  math_dist.h  math_ds.h  math_dummy.h  math_eigen_helper.h  math_feature.h  math_graph.h  math_helper.h  math_indicator.h  math_invest.h  math_lasso.h  math_lm.h  math_matrix.h  math_monoqueue.h  math_random.h  math_random_walk.h  math_ring.h  math_row.h  math_scalar.h  math_segment.h  math_stats.h  math_stats_hft.h  math_stats_no_roll_rb_range.h  math_stats_once.h  math_stats_rolling.h  math_stats_rolling_rb.h  math_stats_rolling_rb_range.h  math_type.h  math_utils.h  math_vector.h  math_vectors.h
pymath/pm/apm/: ir.py
pymath/pm/capm/: characteristic_portfolio.py  max_sharpe_portfolio.py
pymath/pm/forecast/: forecast_basic.py
pymath/pm/risk/: structural_risk_model.py
r/: install.sh
r/cpppkg/: DESCRIPTION  NAMESPACE
r/cpppkg/R/: student-exports.R  student.R  student_export.R
r/cpppkg/man/: MyTimesTwo.Rd  Student.Rd  cpppkg-package.Rd
r/cpppkg/src/: Makevars  RcppExports.cpp  rcpp_hello_world.cpp  student.cpp  student.h  student_export.cpp
r/data/: to_process.txt
r/etc/: .Rprofile  env.sh
r/lab/all_of_statistics/: bootstrap.r  estimate_cdf.r
r/learning/: RStudio.sh  debug.sh  options.r  r_console.r
r/learning/chart/: bar.r  box.r  bubble.r  chart.md  chart_to_file.r  color.r  correlation.r  custom_axis.r  decorate.r  dot_chart.r  histogram.r  line.r  mosaic.r  multi_chart_layout.r  pie.r  plot.r  realtime.r  scatter.r  spinogram.r  violin.r
r/mostly/: clean_up.r  io.r  load_clean.r  loop.r  plot.r  vec_check.r
r/mypkg/: DESCRIPTION
r/utils/: dataloader.r  my_stats.r  utils.r
src/: CMakeLists.txt  math_dummy.cpp  math_dummy_dyn.cpp
src/common/: CMakeLists.txt  linear_svm.cpp  math_invest.cpp  math_lm.cpp  math_model.cpp  math_row.cpp
src/dummy/: CMakeLists.txt  math_dummy.cpp  math_indicator.cpp
src/stool/: CMakeLists.txt  daily_y.cpp  daily_y1.cpp  reduce_moment.cpp
test/: CMakeLists.txt  TestContainer.cpp  TestGraph.cpp  TestInvest.cpp  TestMMSlideWindow.cpp  TestMonoQueue.cpp  TestRandom.cpp  TestRow.cpp  TestSegment.cpp  TestStats.cpp  TestStatsRolling.cpp  TestUtils.cpp  TestVector.cpp
(+221 files in other folders)
